fix spacings and sizes

--- a/styling.css
+++ b/styling.css
@@ -12,14 +12,16 @@ body {
 }
 h1 {
     color: white;
+    margin-bottom: 0.5rem;
 }
 h2 {
     margin: auto;
+    margin-bottom: 10px;
     background-color: var(--dark-blue);
     filter: brightness(135%);
     color: var(--primary-orange);
     padding: 5px 15px;
-    font-size: 1rem;
+    font-size: 0.8rem;
     font-weight: 400;
     border-radius: 50px;
 }
@@ -38,10 +40,10 @@ main {
 .card {
     display: flex;
     flex-direction: column;
-    gap: 25px;
-    max-width: 350px;
+    gap: 20px;
+    max-width: 420px;
     background-color: var(--dark-blue);
-    padding: 25px;
+    padding: 40px;
     border-radius: 15px;    
 }
 .circle {
@@ -69,7 +71,7 @@ main {
     filter: none;
     color: black;
 }
-.rating-button + .selected {
+.rating-button.selected {
     background-color: white;
     filter: none;
     color: black;
@@ -80,7 +82,9 @@ main {
     color: black;
     border-style: none;
     border-radius: 50px;
-    padding: 5px;
+    padding: 8px;
+    font-variant: small-caps;
+    font-size: 1rem;
 }
 .primary-button:hover {
     background-color: white;
